fix: safari images visibility

--- a/memory-game/style.css
+++ b/memory-game/style.css
@@ -136,6 +136,7 @@ body {
   width: 50%;
   justify-content: center;
   align-items: center;
+  -webkit-perspective: 800px;
   perspective: 800px;
   order: 2;
   margin: 1rem 0;
@@ -164,12 +165,29 @@ body {
   cursor: pointer;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 2px 10px;
   border-radius: 10px;
+
+  -webkit-transform-style: preserve-3d;
+  -moz-transform-style: preserve-3d;
   transform-style: preserve-3d;
+
+  -webkit-transition: transform 0.6s ease-in-out;
+  -moz-transition: transform 0.6s ease-in-out;
+  -ms-transition: transform 0.6s ease-in-out;
+  -o-transition: transform 0.6s ease-in-out;
   transition: transform 0.6s ease-in-out;
+
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
   transform: rotateY(0deg);
 }
 
 .card-flip {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -ms-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
   transform: rotateY(180deg);
 }
 
@@ -183,14 +201,16 @@ body {
 
 .card-face {
   border: 0;
-  background-size: cover;
-  background-position: center center;
+  background-size: contain;
   background-repeat: no-repeat;
+  background-position: center center;
 }
 
 .card-back {
   background: url(./assets/images/back-font.jpg) center center no-repeat;
   background-size: cover;
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
   backface-visibility: hidden;
 }
 
@@ -270,7 +290,8 @@ table {
   margin: 2rem;
 }
 
-td, th {
+td,
+th {
   border: 3px solid var(--light-blue);
   text-align: left;
   padding: 8px;
